--- a/config/default.toml
+++ b/config/default.toml
@@ -2,7 +2,8 @@
 port = 3000
 
 [App.database]
-mongo_url = "mongodb://admin:password@localhost:27018/?authMechanism=DEFAULT&authSource=admin"
+mongo_url = "mongodb://localhost:27017"
+mongo_uri = "mongodb://admin:password@localhost:27018/?authMechanism=DEFAULT&authSource=admin"
 
 [App.logger]
 enabled = true
