--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/pino": "^7.0.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/yamljs": "^0.2.34",
     "jest": "^29.7.0",
     "pino-pretty": "^10.3.1",
     "supertest": "^6.3.4",
@@ -38,6 +39,7 @@
     "morgan": "^1.10.0",
     "pino": "^8.19.0",
     "swagger-ui-express": "^5.0.0",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "yamljs": "^0.3.0"
   }
 }
